# aoc21

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: ProjectSettings.cmake  RunConan.cmake  StaticAnalyzers.cmake
day01/: CMakeLists.txt  data.hh
day01/common/: data.hh  solver.hh
day01/part01/: CMakeLists.txt  puzzle.cc  solver.hh  test.cc
day01/part02/: CMakeLists.txt  puzzle.cc  test.cc
day01/solver/: solver.hh
day02/: CMakeLists.txt  data.hh
day02/common/: data.hh  solver.hh
day02/part01/: CMakeLists.txt  puzzle.cc  test.cc
day02/part02/: puzzle.cc  test.cc
day02/solver/: CMakeLists.txt  solver.hh
day03/: CMakeLists.txt
day03/common/: data.hh  solver.hh
day03/part01/: CMakeLists.txt  puzzle.cc  test.cc
day03/part02/: CMakeLists.txt  puzzle.cc  test.cc
day04/: CMakeLists.txt
day04/common/: data.hh  solver.hh
day04/part01/: CMakeLists.txt  puzzle.cc  test.cc
day04/part02/: puzzle.cc  test.cc
day05/: CMakeLists.txt
day05/common/: data.hh  solver.hh
day05/part01/: puzzle.cc  test.cc
day05/part02/: puzzle.cc  test.cc
day06/: CMakeLists.txt
day06/common/: data.hh  solver.hh
day06/part01/: puzzle.cc  test.cc
day06/part02/: puzzle.cc  test.cc
day07/: CMakeLists.txt
day07/common/: data.hh  solver.hh
day07/part01/: puzzle.cc  test.cc
day07/part02/: puzzle.cc  test.cc
day08/: CMakeLists.txt
day08/common/: data.hh  solver.hh
day08/part01/: puzzle.cc  test.cc
day08/part02/: puzzle.cc  test.cc
